Added apiGateWay and changed DTO to record class